[package]
name = "cargo-attribution"
version = "0.7.5"
authors = ["AmeKnite"]
edition = "2021"
rust-version = "1.74.1"
description = "A cargo subcommand to give credit to your dependencies"
documentation = "https://docs.rs/cargo-attribution"
readme = "README.md"
repository = "https://github.com/ameknite/cargo-attribution"
license = "MPL-2.0"
keywords = ["cli", "attribution", "credits", "license"]
categories = ["command-line-utilities"]

[dependencies]
bytes = "1.6.0"
cargo_metadata = "0.18.1"
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = { version = "0.6.3", default-features = false }
reqwest = { version = "0.12.2", default-features = false, features = [
  "rustls-tls",
] }
serde = { version = "1.0.197", features = ["derive"] }
spdx = "0.10.4"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.12"
toml_edit = "0.22.6"
memchr = "2.7.2"
regex = "1.10.4"
adler = "1.0.2"
taplo = "0.13.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
# https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html
unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "warn"
missing-abi = "warn"
missing_docs = "allow"

[lints.clippy]
# https://rust-lang.github.io/rust-clippy/master/index.html
# pedantic
pedantic = "warn"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# restriction
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
