[package]
name = "cargo-attribution"
version = "0.8.13"
authors = ["AmeKnite"]
edition = "2021"
description = "A cargo subcommand to give credit to your dependencies"
documentation = "https://docs.rs/cargo-attribution"
readme = "README.md"
repository = "https://github.com/ameknite/cargo-attribution"
license = "MPL-2.0"
keywords = ["cli", "attribution", "credits", "license"]
categories = ["command-line-utilities"]
rust-version = "1.81.0"

[dependencies]
bytes = "1.10.1"
cargo_metadata = "0.20.0"
clap = { version = "4.5.38", features = ["derive"] }
color-eyre = { version = "0.6.4", default-features = false }
reqwest = { version = "0.12.15", default-features = false, features = [
  "rustls-tls",
] }
serde = { version = "1.0.219", features = ["derive"] }
spdx = "0.10.8"
tokio = { version = "1.45.0", features = ["full"] }
toml = "0.8.22"
toml_edit = "0.22.24"
memchr = "2.7.4"
regex = "1.11.1"
adler = "1.0.2"
taplo = "0.14.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
# https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html
unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "warn"
missing-abi = "warn"
missing_docs = "allow"

[lints.clippy]
# https://rust-lang.github.io/rust-clippy/master/index.html
# pedantic
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# restriction
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
allow_attributes = "warn"
